# gpu_dispatch

./: PLAN.md  README.md  design.md  pyproject.toml
examples/: basic_dispatcher.py  example.py  rich_ui.py
gpu_dispatch/: __init__.py  dispatcher.py  protocol.py  worker.py
gpu_dispatch/ui/: __init__.py  rich_dispatcher.py
tests/: test_basic.py  test_integration.py
