[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu_dispatch"
version = "0.1.0"
description = "Lightweight multi-GPU task orchestration library for inference workloads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sicheng He", email = "hesicheng20@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout>=2.1"]

[project.urls]
Homepage = "https://github.com/hesic73/gpu_dispatch"
Repository = "https://github.com/hesic73/gpu_dispatch"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpu_dispatch*"]
exclude = ["tests*"]
